<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_color"
        tools:context=".presentation.RegisterActivity">

    <!--BG Image-->
    <ImageView
            android:layout_width="352dp"
            android:layout_height="199dp"
            app:srcCompat="@drawable/presents"
            android:id="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"/>

    <TextView
            android:id="@+id/register_tvTitle_tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/register_title"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:fontFamily="@font/catamaran_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/editProfile_etProfileImage"
            android:layout_width="130dp"
            android:layout_height="130dp"
            app:srcCompat="@drawable/ic_launcher_background"
            app:layout_constraintTop_toBottomOf="@+id/register_tvTitle_tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.501"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/editProfile_bSignUp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/login_button_signup"
            android:textSize="25sp"
            android:textAllCaps="false"
            android:background="@drawable/round_button"
            android:textColor="@color/main_color"
            android:stateListAnimator="@null"
            android:fontFamily="@font/catamaran_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="5dp"/>

    <EditText
            android:id="@+id/editProfile_etName"
            android:layout_width="360dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/register_hint_name"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editProfile_etProfileImage"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            android:layout_marginTop="25dp"/>
    <EditText
            android:id="@+id/editProfile_etLastName"
            android:layout_width="360dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/register_hint_lastName"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editProfile_etName"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            android:layout_marginTop="25dp"/>
    <EditText
            android:id="@+id/editProfile_etEmail"
            android:layout_width="360dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/register_hint_email"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editProfile_etLastName"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="25dp"
            app:layout_constraintHorizontal_bias="0.49"/>
    <EditText
            android:id="@+id/editProfile_etPassword1"
            android:layout_width="360dp"
            android:layout_height="48dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/register_hint_password"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editProfile_etEmail"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:id="@+id/editProfile_etPassword2"
            android:layout_width="360dp"
            android:layout_height="48dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/register_hint_repeat_password"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editProfile_etPassword1"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
            android:id="@+id/editProfile_bProfileImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/plus"
            app:layout_constraintEnd_toEndOf="@+id/editProfile_etProfileImage"
            tools:ignore="SpeakableTextPresentCheck"
            app:layout_constraintBottom_toBottomOf="@+id/editProfile_etProfileImage"/>

    <TextView
            android:id="@+id/register_tvErrorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_error_message"
            android:textColor="@color/white"
            android:fontFamily="@font/catamaran_bold"
            app:layout_constraintStart_toStartOf="@+id/editProfile_etPassword2"
            app:layout_constraintTop_toBottomOf="@+id/editProfile_etPassword2"/>

</androidx.constraintlayout.widget.ConstraintLayout>
