<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.EditProfileActivity">

    <TextView
            android:id="@+id/editProfile_tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/edit_profile"
            android:textSize="20dp"
            android:fontFamily="@font/catamaran_black"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/editProfile_etProfileImage"
            android:layout_width="170dp"
            android:layout_height="170dp"
            app:srcCompat="@drawable/ic_launcher_background"
            app:layout_constraintTop_toBottomOf="@+id/editProfile_tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            app:layout_constraintHorizontal_bias="0.501"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/editProfile_bApplyChanges"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/apply_changes"
            android:textSize="25sp"
            android:textAllCaps="false"
            android:background="@drawable/round_pink_button"
            android:textColor="@color/pastel"
            android:stateListAnimator="@null"
            android:fontFamily="@font/catamaran_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="5dp"/>

    <EditText
            android:id="@+id/editProfile_etName"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/register_hint_name"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editProfile_etProfileImage"
            android:textColor="@color/light_gray"
            android:backgroundTint="@color/light_gray"
            android:textColorHint="@color/light_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            android:layout_marginTop="25dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>
    <EditText
            android:id="@+id/editProfile_etLastName"
            android:layout_width="0dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/register_hint_lastName"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editProfile_etName"
            android:textColor="@color/light_gray"
            android:backgroundTint="@color/light_gray"
            android:textColorHint="@color/light_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            android:layout_marginTop="25dp"/>
    <EditText
            android:id="@+id/editProfile_etEmail"
            android:layout_width="0dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/register_hint_email"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editProfile_etLastName"
            android:textColor="@color/light_gray"
            android:backgroundTint="@color/light_gray"
            android:textColorHint="@color/light_gray"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="25dp"
            app:layout_constraintHorizontal_bias="0.49"/>
    <EditText
            android:id="@+id/editProfile_etPassword1"
            android:layout_width="0dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_height="48dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/register_hint_password"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editProfile_etEmail"
            android:textColor="@color/light_gray"
            android:backgroundTint="@color/light_gray"
            android:textColorHint="@color/light_gray"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:id="@+id/editProfile_etPassword2"
            android:layout_width="0dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_height="48dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/register_hint_repeat_password"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editProfile_etPassword1"
            android:textColor="@color/light_gray"
            android:backgroundTint="@color/light_gray"
            android:textColorHint="@color/light_gray"
            app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
            android:id="@+id/editProfile_bProfileImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/pastelplus"
            app:layout_constraintEnd_toEndOf="@+id/editProfile_etProfileImage"
            tools:ignore="SpeakableTextPresentCheck"
            app:layout_constraintBottom_toBottomOf="@+id/editProfile_etProfileImage"/>
  </androidx.constraintlayout.widget.ConstraintLayout>