<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="70dp">

    <TextView
            android:id="@+id/messages_tvUserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/list_item_recent_messages_title"
            android:gravity="left"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:fontFamily="@font/catamaran_bold"
            app:layout_constraintStart_toEndOf="@+id/messages_ivProfilePicture"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toStartOf="@+id/messages_tvTime"
            android:layout_marginEnd="15dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/messages_ivProfilePicture"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_background"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="15dp"
            tools:srcCompat="@tools:sample/avatars"/>

    <TextView
            android:id="@+id/messages_tvLastMessage"
            android:layout_width="0dp"
            android:layout_height="33dp"
            android:layout_marginStart="15dp"
            android:text="@string/list_item_recent_messages_description"
            android:textSize="13sp"
            android:textColor="@color/dark_gray"
            android:fontFamily="arial"
            app:layout_constraintStart_toEndOf="@+id/messages_ivProfilePicture"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="15dp"
            app:layout_constraintTop_toBottomOf="@+id/messages_tvUserName"
            android:layout_marginTop="-3dp"/>
    <TextView
            android:id="@+id/messages_tvTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/list_item_recent_messages_hour"
            android:textSize="15sp"
            android:textColor="@color/dark_gray"
            android:fontFamily="@font/catamaran_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/messages_tvUserName"
            app:layout_constraintBottom_toBottomOf="@+id/messages_tvUserName"/>

    <View
            android:id="@+id/messages_vDivider"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:background="@color/light_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="80dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>